Добавлено создание тестовой среды для утилиты
Создан скрипт для создания тестовой среды (scripts/makeTestEnv). Работает

Создан скрипт для выполнения тестов (scripts/makeTest). Недописан

Добавлено правило CMake для тестирования утилиты

Добавлен вывод команд на установку Doxygen и Valgrind

Мелкие исправления README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,28 @@ cmake_minimum_required(VERSION 3.15)
 project(jls LANGUAGES C)
 
 # Сборка по умолчанию- Debug
-if(NOT CMAKE_BUILD_TYPE)
+if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
 
 # Проверка наличия в системе doxygen
 find_program(DOXYGEN doxygen)
-if(DOXYGEN)
+if (DOXYGEN)
     message(STATUS "Doxygen found: ${DOXYGEN}")
 else()
     message(STATUS "Doxygen not found. HTML documentation is unavailable")
+    message(STATUS "Command to install this package:\n\t sudo apt install doxygen")
 endif()
 
 # Проверка наличия в системе valgrind
-find_program(VALGRIND valgrind)
-if(VALGRIND)
-    message(STATUS "Valgrind found: ${VALGRIND}")
-else()
-    message(STATUS "Doxygen not found. Memory-leak tests is unavailable")
+if (ENABLE_TESTING)
+    find_program(VALGRIND valgrind)
+    if (VALGRIND)
+        message(STATUS "Valgrind found: ${VALGRIND}")
+    else()
+        message(STATUS "Valgrind not found. Memory-leak tests is unavailable")
+        message(STATUS "Command to install this package:\n\t sudo apt install valgrind")
+    endif()
 endif()
 
 # Основные настройки проекта
@@ -34,28 +38,27 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${HEADERS_DIR})
 
 # Настройка правила install
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION bin)
+        RUNTIME DESTINATION bin
+        )
 
 # Настройка правила uninstall
 add_custom_target(uninstall
     COMMAND ${CMAKE_COMMAND}
         -D MANIFEST_FILE=${CMAKE_BINARY_DIR}/install_manifest.txt
-        -P ${CMAKE_SOURCE_DIR}/cmake/uninstall.cmake)
+        -P ${CMAKE_SOURCE_DIR}/cmake/uninstall.cmake
+    )
 
 # Настройка правила создания документации
-if(DOXYGEN)
+if (DOXYGEN)
     add_custom_target(doc
         COMMAND ${DOXYGEN} Doxyfile > ${CMAKE_BINARY_DIR}/doxygen.log 2>&1
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/doc
         COMMENT "Generating HTML documentation. Log file: ${CMAKE_BINARY_DIR}/doxygen.log"
-        VERBATIM)
+        VERBATIM
+    )
 endif()
 
-# Настройка тестирования
-enable_testing()
-
-add_test(NAME Root COMMAND ./${PROJECT_NAME} /)
-
-if(VALGRIND)
-    add_test(NAME RootValgrind COMMAND ${VALGRIND} --leak-check=full --error-exitcode=1 ./${TARGET_FILE} /)
-endif()
+# Настройка правила тестирования
+add_custom_target(test
+    COMMAND bash "${CMAKE_SOURCE_DIR}/scripts/makeTests"
+)
