Доработан скрипт для тестирования утилиты
Теперь скрипт makeTests выполняет проверку утилиты по 3 обязательным тестам (без аргументов, корень ФС и сама утилита) и всем тестам из тестовой среды

Вывод скрипта оформлен цветным выделением. Желтый: информация о тесте. Красный: тест не пройден. Зеленый: тест пройден

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,6 @@ if (DOXYGEN)
 endif()
 
 # Настройка правила тестирования
-add_custom_target(test
-    COMMAND bash "${CMAKE_SOURCE_DIR}/scripts/makeTests"
+add_custom_target(tests
+    COMMAND bash -c "${CMAKE_SOURCE_DIR}/scripts/makeTests ${CMAKE_BINARY_DIR}/${PROJECT_NAME}"
 )
