Добавлен безопасный вывод имен файлов
Функции jlsCheckIsUnsafe() и jlsMakeStringSafe() дописаны и функционируют аналогично функции quotearg_buffer_restyled() из gnulib (по крайней мере в текущих тестах)

Добавлен тест с небезопасными символами в именах файлов (makeTestEnv)

Добавлен режим вывода в файл. Режим работы меняется автоматически, в зависимости от способа запуска jls

Добавлена проверка ls и jls не только в режиме вывода в терминал, но и в режиме вывода в файл

Немного переработан способ вывода информации о результатах тестирования jls

Добавлена поддержка опций jls: --safe-mode и --test-mode. Подробности в README.md в разделе Использование

Исправлена ошибка, при которой значение по адресу isOkPtr не задавалось как true

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ if (DOXYGEN)
     )
 endif()
 
-# Настройка правила тестирования
+# Настройка правил тестирования
 add_custom_target(tests
     COMMAND bash -c "${CMAKE_SOURCE_DIR}/scripts/makeTests ${CMAKE_BINARY_DIR}/${PROJECT_NAME}"
 )
